# supersession

./: .gitignore  CITATION.bib  LICENSE-CODE  LICENSE-DATA  README.md  croissant.json  pyproject.toml  requirements.txt
docker/: docker-compose.graphiti.yml
pipeline/: _runner_utils.py  cache.py  manifest.py
prompts/: active_evidence_extract.jinja  event_sessions.jinja  intervention_extract.jinja  intervention_extract_drift_aware.jinja  intervention_select.jinja  judge_vf.jinja  seed_realization.jinja
scripts/: build_failure_attribution_html.py  build_manifest.py  build_paper_data.py  build_paper_figures.py  cross_judge_agreement.py  graphiti_infra.sh  list_missing.py  md_to_latex.py  merge_failure_attribution.py  realize_phase3.py  recompute_horizon_paired.py  recompute_main_table.py  recompute_paired_ci.py  recompute_per_system_tables.py  recompute_recall_gap.py  recompute_xjudge_mistral.py  run_diagnostics_phase3.py  run_extras_drift_phase3.py  run_graphiti_phase3.py  run_long_context_gemini_phase3.py  run_long_context_gpt54_phase3.py  run_simple_baselines_phase3.py  run_sonnet_respond_ablation_phase3.py  run_wrappers_phase3.py  score_responses.py  select_phase3_manifest.py  validate_release.py
seeds/: __init__.py
tests/: test_audit_gold_consistency.py  test_baseline_runners_extra.py  test_baselines.py  test_bootstrap.py  test_cache.py  test_cleanup.py  test_horizon_budget.py  test_intervention.py  test_judge.py  test_leakage_filter.py  test_loaders.py  test_manifest.py  test_naturalness.py  test_realization.py  test_recall.py  test_same_target.py  (+6 more)
(+993 files in other folders)
