[project]
name = "supersession"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "torch>=2.11.0",
    "pydantic>=2.9",
    "numpy>=2.1",
    "scipy>=1.14",
    "matplotlib>=3.9",
    "pyyaml>=6.0",
    "jinja2>=3.1",
    "rich>=13.9",
    "boto3>=1.42.96",
    "graphiti-core[falkordb]>=0.28.2",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-cov>=5.0",
]

[tool.uv.sources]
torch = { index = "pytorch-cu126" }

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["pipeline"]
